# DataVisualizer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config.cmake
bin_examples/: example_2DLine  example_vector_init
bin_tests/: test_allocater_extender  test_init_opengl  test_init_vulkan  test_pointer_insert  test_shared_pointer_access  test_vector_init
cmake/: CMakeLists.txt
examples/: CMakeLists.txt
examples/2DBarGraphExample/: example_vector_init.cpp
examples/2DLineGraphExample/: example_2DLine.cpp
include/: Basic2DLinePlot.h  Constants.h  DataSet.h  DataSets.h  DataVisualizer.h  Plot.h  Renderer.h  Renderer_OpenGL.h  Renderer_OpenGL_GLUT.h  Renderer_Vulkan_GLFW.h  Vertex.h
shaders/: glslangValidator
src/: DataSet.cpp  DataSets.cpp  DataVisualizer.cpp  Plot.cpp  Renderer_OpenGL.cpp  Renderer_Vulkan_GLFW.cpp
src/renders/: Renderer_OpenGL_GLUT.cpp  Renderer_Vulkan_GLFW.cpp
test/: Makefile  cmake_install.cmake
test/test1/: Makefile  cmake_install.cmake  main.cpp
tests/: CMakeLists.txt
tests/test_allocater_extender/: test_allocater_extender.cpp
tests/test_init_opengl/: test_init_opengl.cpp
tests/test_init_vulkan/: test_init_vulkan.cpp
tests/test_pointer_insert/: test_pointer_insert.cpp
tests/test_shared_pointer_access/: test_shared_pointer_access.cpp
tests/test_vector_insert/: test_vector_init.cpp
